===================================
gnome-commander 1.2.8.12
---------------

Bug fixes:
 * Fixed problem #618214 (crash when cancel a search)
 * Fixed problem #640387 (yet another fix for deprecated python modules: md5, sha1)
 * Fixed problem #649375 (bookmarks not updated for newly added ones)


===================================
gnome-commander 1.2.8.11
---------------

Bug fixes:
 * Fixed problem #639243 (misleading docs for F2 shortcut)
 * Fixed problem #640387 (usage of deprecated python modules: md5, sha1)
 * Fixed problem with starting GNOME Commander as root
 * Fixed problem with Traditional Chinese translation

New features:
 * Support for backward/forward mouse buttons


===================================
gnome-commander 1.2.8.10
---------------

Bug fixes:
 * Fixed problem #448941 (numeric keypad arrows don't work in the main window)
 * Fixed problem #620275 (add menu item to copy full path and file name to clipboard)
 * Fixed problem #637501 (advrename: metatag popup menu shows wrong items)
 * Fixed problem with toggling path/basename/filename selections in copy/move dialogs
 * Fixed problem with searching path for devices
 * Updated translations: de


===================================
gnome-commander 1.2.8.9
---------------

Bug fixes:
 * Fixed problem #352024 (F10 key doesn't work)
 * Fixed problem #631243 (advrename $c(width) regression)

New features:
 * Support for shell-style wildcards in quick search


===================================
gnome-commander 1.2.8.8
---------------

Bug fixes:
 * Fixed problem #610764 (menu item won't stay checked)
 * Fixed problem #626469 (add support for other su-like programs: xdg-su, gnomesu)
 * Fixed problem with broken Spanish translation


===================================
gnome-commander 1.2.8.7
---------------

Bug fixes:
 * Fixed problem #540438 (no GUI message if meld cannot be executed)
 * Fixed problem #616367 ("File not found" dialog after startup)