@@ -6097,6 +6097,9 @@
                         <listitem>
                             <para>Fixed problem #649375 (bookmarks not updated for newly added ones)</para>
                         </listitem>
+                        <listitem>
+                            <para>Fixed problem with mkdir permissions</para>
+                        </listitem>
                     </itemizedlist>
                 </para>
             </entry>
